Finish program creation from program basic logic (after rebase version, not fully audited)

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,6 +18,8 @@ members = [
     "fib",
     "fungible-token",
     "futures-unordered",
+    "init-wait",
+    "create-program",
     "mem",
     "guestbook",
     "gui-test",
