--- a/pallets/gear/Cargo.toml
+++ b/pallets/gear/Cargo.toml
@@ -46,6 +46,7 @@ wabt = "0.10"
 gear-core = { path = "../../core" }
 hex-literal = "0.3.4"
 tests-distributor = { path = "../../tests/distributor" }
+tests-program-factory = { path = "../../tests/program-factory" }
 tests-init-wait = { path = "../../tests/init-wait" }
 
 [features]
