--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,6 +15,7 @@ hashbrown = "0.12"
 log = { version = "0.4.14", default-features = false }
 parity-wasm = { version = "0.42.2", default-features = false }
 pwasm-utils = { version = "0.19.0", default-features = false }
+blake2-rfc = { version = "0.2.16", default-features = false }
 
 [dev-dependencies]
 wabt = "0.10.0"
