--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,6 +10,7 @@ codec = { package = "parity-scale-codec", version = "2", default-features = fals
 scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
 primitive-types = { version = "0.10.1", default-features = false, features = ["scale-info"] }
 log = "0.4.16"
+either = { version = "1.6.1", default-features = false }
 
 # Internal deps
 gear-core = { path = "../core" }
@@ -43,6 +44,7 @@ std = [
     "frame-support/std",
     "primitive-types/std",
     "gear-runtime-interface/std",
+    "either/use_std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
