Log memory allocation in WASMI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,3 +62,6 @@ inherits = "release"
 lto = "fat"
 # https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
 codegen-units = 1
+
+[patch.crates-io]
+wasmi = { git = "https://github.com/gear-tech/wasmi", branch = "al-logs" }
