--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -707,7 +707,7 @@ jobs:
 
   build-macos-x86:
     if: github.ref == 'refs/heads/master'
-    needs: spec_version
+    # needs: spec_version
     runs-on: macos-latest
     steps:
       - name: Cancel Previous Runs
