--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -15,27 +15,29 @@ env:
   NIGHTLY_TOOLCHAIN_VERSION: ${{ secrets.NIGHTLY_TOOLCHAIN_VERSION }}
 
 jobs:
-  spec_version:
-    runs-on: [self-hosted, cachepot, epyc]
-    steps:
-      - name: Cancel Previous Runs
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: styfle/cancel-workflow-action@0.9.1
-        with:
-          access_token: ${{ github.token }}
+  # Disable in vara branches
+  # spec_version:
+  #   runs-on: [self-hosted, cachepot, epyc]
+  #   steps:
+  #     - name: Cancel Previous Runs
+  #       if: ${{ github.event_name == 'pull_request' }}
+  #       uses: styfle/cancel-workflow-action@0.9.1
+  #       with:
+  #         access_token: ${{ github.token }}
 
-      - name: "ACTIONS: Checkout"
-        uses: actions/checkout@v3
+  #     - name: "ACTIONS: Checkout"
+  #       uses: actions/checkout@v3
 
-      - name: "Fetch origin"
-        run: git fetch origin
+  #     - name: "Fetch origin"
+  #       run: git fetch origin
 
-      - name: "Check spec version"
-        if: ${{ ! contains(github.event.pull_request.labels.*.name, 'A4-insubstantial') }}
-        run: ./scripts/check-spec.sh
+  #     - name: "Check spec version"
+  #       if: ${{ ! contains(github.event.pull_request.labels.*.name, 'A4-insubstantial') }}
+  #       run: ./scripts/check-spec.sh
 
   check:
-    needs: spec_version
+    # Disable in vara branches
+    # needs: spec_version
     runs-on: [self-hosted, cachepot, epyc]
     env:
       RUSTUP_HOME: /tmp/rustup_home
@@ -117,7 +119,8 @@ jobs:
           mv /tmp/*.tar /root/cache/
 
   build:
-    needs: spec_version
+    # Disable in vara branches
+    # needs: spec_version
     runs-on: [self-hosted, cachepot, epyc]
     env:
       LLVM_PROFILE_FILE: "gear-%p-%m.profraw"
@@ -236,8 +239,8 @@ jobs:
           cargo nextest run --release -p gear-program --features bin
           cargo nextest run --release -p gear-program --no-default-features --features bin,vara
 
-      - name: "Test: Client tests"
-        run: ./scripts/gear.sh test client --run-node
+      # - name: "Test: Client tests"
+      #   run: ./scripts/gear.sh test client --run-node
 
       - name: "Test: Process node runtime spec tests"
         run: |
@@ -341,7 +344,7 @@ jobs:
 
   build-win:
     if: github.ref == 'refs/heads/master' || contains(github.event.pull_request.labels.*.name, 'E1-forcewindows')
-    needs: spec_version
+    # needs: spec_version
     runs-on: ci-win
     defaults:
       run:
@@ -528,6 +531,60 @@ jobs:
         with:
           command: build
           args: -p gear-cli --features=lazy-pages
+
+      - name: "Test: Lazy pages"
+        uses: actions-rs/cargo@v1
+        with:
+          command: nextest
+          args: >-
+            run
+            -p pallet-gear
+            -p pallet-gear-debug
+            -p pallet-gear-payment
+            -p gear-lazy-pages
+            -p gear-runtime-interface
+            --features=lazy-pages
+
+  build-macos-x86:
+    if: github.ref == 'refs/heads/master'
+    runs-on: macos-latest
+    steps:
+      - name: Cancel Previous Runs
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
+
+      - name: "ACTIONS: Checkout"
+        uses: actions/checkout@v2
+
+      - name: "ACTIONS: Setup caching"
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: "Install: Nightly toolchain"
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          target: wasm32-unknown-unknown
+
+      - name: "Install: cargo-nextest"
+        run: curl -LsSf https://get.nexte.st/latest/mac | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
+
+      - name: "Build: Node"
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: -p gear-node --features=lazy-pages
 
       - name: "Test: Lazy pages"
         uses: actions-rs/cargo@v1
