--- a/pallets/gear/Cargo.toml
+++ b/pallets/gear/Cargo.toml
@@ -46,7 +46,6 @@ pallet-balances = { version = "4.0.0-dev", default-features = false, git = "http
 pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v0.9.33" }
 pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v0.9.33" }
 pallet-gear-program = { path = "../gear-program", default-features = false }
-
 sp-consensus-babe = { version = "0.10.0-dev", optional = true, git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v0.9.33", default-features = false }
 
 # Benchmark deps
@@ -54,6 +53,7 @@ sp-sandbox = { version = "0.10.0-dev", git = "https://github.com/gear-tech/subst
 serde = { version = "1", optional = true, features = ["derive"] }
 rand = { version = "0.8", optional = true, default-features = false }
 rand_pcg = { version = "0.3", optional = true }
+sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "gear-polkadot-v0.9.33", default-features = false, optional = true }
 test-syscalls = { path = "../../examples/binaries/sys-calls", optional = true, default-features = false }
 demo-proxy = { path = "../../examples/binaries/proxy", optional = true, default-features = false }
 
@@ -136,6 +136,7 @@ runtime-benchmarks = [
 	"gear-backend-common/mock",
 	"gear-core-errors/codec",
 	"sp-sandbox",
+	"sp-consensus-slots",
 	"sp-consensus-babe",
 	"rand",
 	"rand_pcg",
