add light_sr25519 to cargo
Signed-off-by: MikitaS <mikita.stryzhak@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "core-processor",
     "core-errors",
     "examples/binaries/*",
+    "examples/light_sr25519",
     "galloc",
     "gclient",
     "gcore",
