--- a/.github/workflows/Purge.yml
+++ b/.github/workflows/Purge.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - name: Clean up
         run: |
-          ls -la /root/cache
-          rm -rvf /root/cache/*
+          sudo ls -la /root/cache
+          sudo rm -rvf /root/cache/*
