--- a/common/lazy-pages/Cargo.toml
+++ b/common/lazy-pages/Cargo.toml
@@ -13,7 +13,7 @@ gear-core = { path = "../../core", default-features = false }
 gear-common = { path = "..", default-features = false }
 gear-runtime-interface = { path = "../../runtime-interface", default-features = false }
 
-sp-std = { version = "4.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable", default-features = false }
+sp-std = { version = "4.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging", default-features = false }
 
 [features]
 default = ["std"]
