--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,12 +1,6 @@
 name: CI
 
 on:
-  schedule:
-    - cron: "0 3 * * *"
-  push:
-    branches: [master, vara-stage-1, vara-stage-2, vara-stage-3]
-  pull_request:
-    branches: [master, vara-stage-1, vara-stage-2, vara-stage-3]
   workflow_dispatch:
 
 env:
@@ -557,7 +551,6 @@ jobs:
             --features=lazy-pages
 
   upload:
-    if: github.event_name == 'push' && github.ref_name == 'master'
     runs-on: self-hosted
     needs: build
     steps:
@@ -586,7 +579,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
-          tag_name: build
+          tag_name: stable
           draft: false
           fail_on_unmatched_files: true
           files: artifact/*
