--- a/.github/workflows/CI-gear-loader-network.yml
+++ b/.github/workflows/CI-gear-loader-network.yml
@@ -9,7 +9,7 @@ env:
 jobs:
 
   build-gear-loader:
-    runs-on: [self-hosted, cachepot, epyc-4, k8s-runner]
+    runs-on: [ubuntu]
     env:
       RUSTUP_HOME: /tmp/rustup_home
     steps:
