--- a/.github/workflows/CI-gear-loader-network.yml
+++ b/.github/workflows/CI-gear-loader-network.yml
@@ -9,7 +9,7 @@ env:
 jobs:
 
   build-gear-loader:
-    runs-on: [ubuntu]
+    runs-on: ubuntu-latest
     env:
       RUSTUP_HOME: /tmp/rustup_home
     steps:
